<resources>
    <string name="app_name">CoronaWatch</string>
    <string name="app_title">صحتك هي اولويتنا</string>
    <string name="slogan">اعتن بصحتك و بصحة من حولك</string>
    <string name="start_btn">ابدأ الآن</string>
    <string name="logo">logo</string>
    <string name="description">this is a description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter">تسجيل الدخول</string>
    <string name="login_slogan">استكشف بيئتك  \nو احمي نفسك و عائلتك</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Google</string>
    <string name="facebook_app_id">1669449756527026</string>
    <string name="fb_login_protocol_scheme">fb1669449756527026</string>
    <string name="content">المحتوى</string>
    <string name="signal">الابلاغ</string>
    <string name="map">الخريطة</string>
    <string name="home">الرئيسية</string>
    <string name="shared_pref">CoronaWatch</string>
    <string-array name="menu">
        <item>الصفحة الرئيسية</item>
        <item>الخريطة</item>
        <item>اضافة محتوى</item>
        <item>الابلاغ</item>
        <item>المحتوى</item>
        <item>التنبيهات</item>
    </string-array>
    <string name="current_stats">احصائيات حالية</string>
    <string name="nbr_deaths">عدد\nالوفيات </string>
    <string name="nbr_infected">عدد\nالاصابات</string>
    <string name="nbr_cared">عدد حالات\nالشفاء</string>
    <string name="postion_state">حالة موقعك</string>
    <string name="recordVideo">تسجيل فيديو</string>
    <string name="takePhoto">اخذ صورة</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWxpMzEiLCJhIjoiY2s4cHRucGg1MDRkOTNkbXRtZzQ0b2QxdiJ9.IbO-ne07C-2YP_Wlj1BkOg</string>
    <string name="searchBarHint">البحث عن منطقة...</string>
    <string name="place_nbr_deaths">حالات الوفاة </string>
    <string name="place_nbr_infected">إصابات مؤكدة</string>
    <string name="place_nbr_cared">حالات العلاج</string>
    <string-array name="graph_menu">
        <item>حالات الاصابة</item>
        <item>حالات الوفاة</item>
        <item>حالات العلاج</item>
    </string-array>
    <string-array name="map_menu">
        <item>حالات الاصابة</item>
        <item>حالات الوفاة</item>
        <item>حالات العلاج</item>
        <item>مناطق الخطر</item>
    </string-array>
    <string-array name="spinner_content">
        <item>المقالات</item>
        <item>الفيديوهات</item>
        <item>المنشورات</item>
    </string-array>
    <string name="last_update">آخر تحديث : </string>
    <string name="host">https://coronawatch-api-v0.herokuapp.com</string>
    <string name="test_host">http://192.168.1.55:3000</string>
    <string name="closestDangerZoneLabel">اقرب منطقة خطر</string>
    <string name="yourPositionLabel">موقعك</string>
    <string name="dangerLabel">حذاري</string>
    <string name="closestDistanceLabel">على اقرب منطقة خطر</string>
    <string name="degre_danger">درجة الخطورة :</string>
    <string name="reason_danger">السبب :</string>
    <string name="dangerZoneLabel">هذه منطقة خطيرة</string>
    <string name="number_example">5</string>
    <string name="article_title_example">طرق الوقاية من الفيروس</string>
    <string name="add_comment">إضافة تعليق ...</string>
    <string name="date_example">24-09-2020</string>
    <string name="username_example">علي شريف</string>
    <string name="default_web_client_id_google_auth">47228953457-rifthskf9hte6jkn7g6n85l4jtbhr9ko.apps.googleusercontent.com</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="profile_title">الحساب</string>
    <string name="health_data_title">بيانات الصحة</string>
    <string name="how_to_protect_title">كيف تحمي نفسك</string>
    <string name="log_out_title">تسجيل الخروج</string>
    <string name="notification_example">هذا تنبيه</string>
    <string-array name="gender_list">
        <item>ذكر</item>
        <item>انثى</item>
    </string-array>
</resources>
