<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical|end"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.05"
        android:fontFamily="@font/almarai_bold"
        android:gravity="start|center_vertical"
        android:text="@string/current_stats"
        android:textColor="@color/darkblue"
        android:textSize="19sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.2"
        android:background="@drawable/home_back_1">

        <TextView
            android:id="@+id/nbrDeathsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/redLighter"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ProgressBar
            android:id="@+id/progressBarNbrDeaths"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/darkblue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/nbrDeathsView"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/nbr_deaths"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.2"
        android:background="@drawable/home_back_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/nbrInfectedView"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/nbr_infected"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nbrInfectedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/greyLighter"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ProgressBar
            android:id="@+id/progressBarNbrInfected"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/darkblue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.2"
        android:background="@drawable/home_back_3">

        <TextView
            android:id="@+id/nbrCaredView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/redLighter"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ProgressBar
            android:id="@+id/progressBarNbrCared"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/darkblue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/nbrCaredView"
            android:fontFamily="@font/almarai_bold"
            android:gravity="center"
            android:text="@string/nbr_cared"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.05"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/postion_state"
        android:textColor="@color/darkblue"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.3"
        android:contentDescription="@string/logo"
        android:src="@drawable/text_group" />

</LinearLayout>