<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:elevation="2dp"
    android:gravity="bottom|start"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05"
            android:contentDescription="@string/logo"
            android:src="@drawable/notification_icon_off" />

        <TextView
            android:id="@+id/fragmentTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.8"
            android:fontFamily="@font/almarai_bold"
            android:gravity="start"
            android:textColor="@color/darkblue"
            android:textSize="24sp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.15"
            android:src="@drawable/user" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/homeFragmentView"
            android:name="com.example.coronawatch.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_home" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/contentBtnView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_content"
            android:fontFamily="@font/almarai_bold"
            android:paddingTop="10dp"
            android:text="@string/content"
            android:textColor="@color/bottom_icons_gret"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signalBtnView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_camera"
            android:fontFamily="@font/almarai_bold"
            android:paddingTop="10dp"
            android:text="@string/signal"
            android:textColor="@color/bottom_icons_gret"
            android:textSize="12sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.1"
            android:backgroundTint="@color/redLight"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:backgroundTint="@color/white"
            app:borderWidth="3dp"
            app:maxImageSize="46dp"
            app:srcCompat="@drawable/ic_add" />

        <Button
            android:id="@+id/mapBtnView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_map"
            android:fontFamily="@font/almarai_bold"
            android:paddingTop="10dp"
            android:text="@string/map"
            android:textColor="@color/bottom_icons_gret"
            android:textSize="12sp" />

        <Button
            android:id="@+id/homeBtnView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_home"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/almarai_bold"
            android:paddingTop="10dp"
            android:text="@string/home"
            android:textColor="@color/bottom_icons_gret"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>