<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/loginActivity"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/enter"
                android:textColor="@color/darkblue"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:gravity="center"
                android:text="@string/login_slogan"
                android:textColor="@color/light_grey"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">


            <LinearLayout
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/login_button_shadow"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/facebookLogoView"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="3dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:id="@+id/facebookTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/facebook"
                    android:textColor="@color/darkblue"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/google_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_button_shadow"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/googleLogoView"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="2dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google_icon" />

                <TextView
                    android:id="@+id/googleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/gmail"
                    android:textColor="@color/darkblue"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>